--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-# Projet de NSI
+Projet de NSI
+
 Dépendances :
  - python
  - pip
@@ -7,6 +8,9 @@ Dépendances :
 
 Installer les dépendances :
 pip install flask flask-bcrypt gunicorn
+
+Initialiser le projet :
+python init_projet.py
 
 Lancer le projet en mode développement :
 flask run
